--- a/finalProject/app/src/main/res/layout/fragment_login.xml
+++ b/finalProject/app/src/main/res/layout/fragment_login.xml
@@ -30,7 +30,8 @@
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
             android:id = "@+id/userlogin"
-            android:hint = "Username                        "
+            android:hint = "Email                                "
+            android:inputType="textEmailAddress"
             android:focusable = "true"
             android:textColorHighlight = "#ff7eff15"
             android:textColorHint = "#ffff25e6"
