--- a/finalProject/app/src/main/res/layout/activity_add_post.xml
+++ b/finalProject/app/src/main/res/layout/activity_add_post.xml
@@ -84,6 +84,18 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:layout_toEndOf="@+id/textview" />
-
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/addpostPB"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_width="100dp"
+            android:visibility="gone"
+            android:layout_height="100dp" />
+    </LinearLayout>
+
 </LinearLayout>
