--- a/finalProject/app/src/main/res/layout/fragment_list_row.xml
+++ b/finalProject/app/src/main/res/layout/fragment_list_row.xml
@@ -31,15 +31,29 @@
             android:maxLines="1"
             android:layout_marginBottom="15dp"
             />
+    <FrameLayout
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
 
         <ImageView
             android:id="@+id/rowImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:src="@drawable/avatar"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1" />
+        <ProgressBar
+            android:id="@+id/getImagrPB"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_width="100dp"
+            android:visibility="gone"
+            android:layout_height="100dp" />
+    </FrameLayout>
 
-    </LinearLayout>
+
+</LinearLayout>
 
 
 
