--- a/finalProject/app/src/main/res/layout/fragment_login.xml
+++ b/finalProject/app/src/main/res/layout/fragment_login.xml
@@ -91,4 +91,18 @@
         android:layout_toEndOf="@+id/textview" />
 
 </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/loginPB"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_width="100dp"
+            android:visibility="gone"
+            android:layout_height="100dp" />
+    </LinearLayout>
+
+
 </LinearLayout>
