--- a/finalProject/app/src/main/res/layout/fragment_regiser.xml
+++ b/finalProject/app/src/main/res/layout/fragment_regiser.xml
@@ -88,4 +88,17 @@
             android:layout_weight="1" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/regtPB"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_width="100dp"
+            android:visibility="gone"
+            android:layout_height="100dp" />
+    </LinearLayout>
+
 </LinearLayout>
