--- a/finalProject/app/src/main/res/layout/fragment_list_row.xml
+++ b/finalProject/app/src/main/res/layout/fragment_list_row.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/imageuser"
         android:layout_width="wrap_content"
@@ -12,13 +15,29 @@
         android:textSize="30dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_weight="1"
-        android:layout_gravity=""
+        android:layout_weight="3"
         android:maxLines="1"
         android:layout_marginBottom="15dp"
         />
 
-        <TextView
+        <ImageView
+            android:id="@+id/edidBTN"
+            android:layout_width="10dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="left"
+            android:src="@drawable/edit"
+            android:visibility="gone"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+
+            android:layout_weight="1" />
+
+
+    </LinearLayout>
+
+
+    <TextView
             android:id="@+id/textImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
