--- a/finalProject/app/src/main/res/layout/fragment_list_row.xml
+++ b/finalProject/app/src/main/res/layout/fragment_list_row.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_weight="3"
+        android:maxWidth="200dp"
         android:maxLines="1"
         android:layout_marginBottom="15dp"
         />
